﻿
todo:
isRebootRequested : http://askubuntu.com/questions/28530/how-can-i-tell-what-package-requires-a-reboot-of-my-system


##################################################################

opsi-winst/opsi-script (4.12.0.17) stable; urgency=low

  * osparser: processcall: log Executing ol LLNotice
  * new unit osparserhelper in common (Skip / getword /  ...)

-- Detlef Oertel <d.oertel@uib.de>  Fri, 13 Apr 2018:15:00:00 +0200


opsi-winst/opsi-script (4.12.0.16) stable; urgency=low

  * typo of log messages
  * change to Lazarus 1.8.2
  * switch HighDPI awareness on (8.1+, per monitor)
  * osparser: reportError: more info on defined functions at syntax error
  * osfunc: getsectionlines: include leading comments and empty lines
  * osdefinedfunctions, osparser: allow defined functions with no parameters; fixes #3182
  * osdefinedfunctions, osparser: allow defined functions with data  type void
  * oslog: fixed check for library logging
  * activate normal debug_lib again (see 4.12.0.13 temporary always true)
  * osparser: doAktionen: tsDefineFunction: try-excepts
  * osparser: reread opsi.conf parameters for every script; fixes #3337
  * osparser: splitstring: if string is confidential all parts are confidential as well; fixes #3186
  * osparser: splitStringOnWhiteSpace: if string is confidential all parts are confidential as well; fixes #3186
  * osfunc: FSaveToFile new param raise_on_error ; fixes #3253
  * new string function asConfidential:
     1. backup and set loglevel to warning |2 get the input | 3 make it confidential
      | 4 give it to output |5 restore loglevel           #3441
  * found undocumented string function upper(<str>); fixes #3283
  * new boolean function RegKeyExists(<keystr> [,<access str>])
      <access str> = one of 32bit, 64bit, sysnative ; default sysnative   ; fixes #3078
  * new boolean function RegVarExists(<keystr>, <var str> [,<access str>])
  * no warning for not existing releaseid  ; fixes #2595